--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -31,6 +31,9 @@
   .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
     scroll-margin-top: 3.5em;
   }
+  .prose code {
+    @apply dark:text-gray-200;
+  }
   .prose pre code {
     @apply overflow-x-auto !important
   }
